<resources>
    <string name="app_name">NewNotes</string>
    <string name="toolbar_title">My Business Plan</string>
    <string name="search_title">Search</string>

    <string name="menu_notes_item_notifications">Напоминания</string>

    <string name="tab_item_different">Different</string>
    <string name="tab_item_ideas">Ideas</string>
    <string name="tab_item_todo">TODO</string>
    <string name="tab_item_birthdays">Birthdays</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>


    <string name="menu_notes_item_todo">TODO</string>
    <string name="menu_notes_item_ideas">Ideas</string>
    <string name="menu_notes_item_birthdays">Birthdays</string>
    <string name="menu_notes_item_different">Different</string>
    <string name="menu_notes_item_mainmenu">Main menu</string>


    <string name="menu_events_item_today">Today</string>
    <string name="menu_events_item_thismonth">This month</string>
    <string name="menu_events_item_all_events">All events</string>
    <string name="menu_events_item_mainmenu">Main menu</string>

    <string name="menu_events_item">Events</string>

    <string-array name="Categories">
        <item>Programming</item>
        <item>To Do</item>
        <item>To Buy</item>
        <item>Jokes</item>
        <item>Thoughts</item>
        <item>Default</item>
    </string-array>


    <string-array name="Months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>









    <string name="admob_app_id">ca-app-pub-7986696519803132~8675083605</string>

    <string name="banner_home_footer">ca-app-pub-7986696519803132/1151816806</string>

    <string name="interstitial_full_screen">ca-app-pub-7986696519803132/2628550005</string>


    <string name="billing_pubkey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAr8+eB6Qqt1lCwICbytQQ/0i1pzpxujVywz3n0caLEvG51Ss1GzJxElj2mF+rLe5iuWfIe65Ix3b/eUCfVc2KVehDxYTtS66yTbXQSyt/Gg4rJ9blPipaNwRR4kQfCVRyphAVpCfiWMqiVEL7UB28Q6z47N1KyW4ImKClno62Hfu0TY91J3YRx4UHLHGmKwI3zY3qsNzEJ0OCxSdBmjNsKsDxfnNJvmO+6uHh355QAZre9ory9EeWemHEhfYPSixevpv5Kn2rLYrXWZwZSrSmHFFCmE6O25UOkDFK4IAb2kK57FLVGrmJ/WTz02eTs52oOfuMMqK2hqO0FdX/IMWjNwIDAQAB</string>

</resources>
